--- a/src/pages/mesas_de_trabalho/Mesa02/style.module.scss
+++ b/src/pages/mesas_de_trabalho/Mesa02/style.module.scss
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
 .mesa-02 {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 27.9% 1fr;
-
+  min-height: 100vh;
   font-family: "Poppins", sans-serif;
 
   aside {
-    // height: 100vh;
+    height: 100vh;
+    position: fixed;
+    width: 28%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,6 +15,9 @@
   }
 
   main {
+    width: 72%;
+    position: absolute;
+    right: 0;
     padding: 70px 50px;
     background: #ffffff;
 
@@ -38,6 +40,12 @@
         line-height: 24px;
         color: #343434;
       }
+    }
+
+    .tasks-list {
+      display: flex;
+      flex-direction: column;
+      gap: 26px;
     }
   }
 }
