--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/* Configurações de Tailwind estão na Mesa03Tailwind apenas*/
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+/* Demais projetos utilizam este reset */
 * {
   margin: 0;
   padding: 0;
